--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="icon" href="img/misc/favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1">  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="img/favicon.ico">   
 </head>
 <body>
 
@@ -17,15 +18,15 @@
     </div>
 
     <nav class="navigation">
-      <a title="Перейти" class="navigation-link" href="#">Главная</a>
+      <a title="Перейти" class="navigation-link" href="index.html">Главная</a>
       <a title="Перейти" class="navigation-link" href="#">О Седоне</a>
-      <a title="Перейти" class="navigation-link" href="#">Гостиницы</a>
+      <a title="Перейти" class="navigation-link" href="catalog.html">Гостиницы</a>
     </nav>
 
     <div class="user-nav">
       <button class="user-nav-search" aria-label="Поиск"></button>
       <button class="user-nav-favourite" aria-label="В избранное"><span class="user-nav-favourite-number">12</span></button>
-      <a title="Получить преложение" class="user-nav-action-link">Хочу туда!</a>
+      <a title="Получить преложение" class="user-nav-action-link open-popup brown-button">Хочу туда!</a>
     </div>
   </header>
 
@@ -93,7 +94,7 @@
     <section class="call-to-action container">
       <h2 class="call-to-action-title">Заинтересовались?</h2>
       <p class="call-to-action-decription">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="call-to-action-link" href="#">ПОИСК ГОСТИНИЦЫ В Cедоне</a>
+      <a class="call-to-action-link brown-button" href="#">ПОИСК ГОСТИНИЦЫ В Cедоне</a>
     </section>
 
     <article class="email-block container">
@@ -104,12 +105,85 @@
           <div class="subscribe-form-box-wrapper">              
             <input type="text" name="signup-email" id="signup-email" class="signup-email-input" placeholder="Ваш e-mail" required>
             <label for="signup-email" class="subscribe-form-box-label"></label> 
-            <button class="subscribe-form-button button" type="submit">Подписаться</button>
+            <button class="subscribe-form-button button blue-button" type="submit">Подписаться</button>
           </div>
         </form>
       </div> 
     </article> 
+
+  <article class="search-popup popup-switcher">
+    <form class="search-popup-form" action="https://echo.htmlacademy.ru/" method="post" target="_blank">
+
+      <div class="search-popup-header">
+        <h2 class="search-popup-title">Поиск гостиницы в Седоне</h2>
+        <div class="close-wrapper">
+          <a href="#" class="close-popup open-popup close-icon-popup-search" aria-label="закрыть"></a>
+        </div>
+      </div>  
+      <fieldset class="search-popup-fieldset">
+        <legend class="search-popup-legend visually-hidden">Подбор тура</legend> 
+
+        <div class="search-popup-date-check-in search-popup-item">
+          <label class="search-popup-label" for="date-check-in">Дата заезда:</label>
+          <input class="date-check-in-input" type="text" name="date-check-in" placeholder="Укажите дату" id="date-check-in" required>
+          <span class="calendar-icon"></span>    
+        </div>
+        <div class="search-popup-date-check-out search-popup-item">
+          <label class="search-popup-label" for="date-check-out">Дата выезда:</label>
+          <input class="date-check-out-input" type="text" name="date-check-out" placeholder="Укажите дату" id="date-check-out" required>
+          <span class="calendar-icon"></span>   
+        </div>  
+
+
+
+
+
+
+<div class="people-number-wrapper">
+        <div class="search-popup-number search-popup-item">
+          <div class="search-popup-title-age"><span>Взрослые:</span> </div>
+          <div class="search-popup-number-wrapper">
+            <div class="number-minus-wrapper">
+              <a href="#" class="number-minus" aria-label="munis"></a>
+            </div>
+            <input class="search-popup-number-text" type="text" name="count" value="2">
+            <div class="number-plus-wrapper">   
+              <a href="#" class="number-plus" aria-label="plus"></a>
+            </div>  
+          </div>
+        </div> 
+
+                <div class="search-popup-number search-popup-item">
+          <div class="search-popup-title-age"><span class="children-title">Дети:</span> <span class="children-info">i</span>
+            <div class="hover-info">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</div>
+          </div>
+          <div class="search-popup-number-wrapper">
+            <div class="number-minus-wrapper">
+              <a href="#" class="number-minus" aria-label="munis"></a>
+            </div>
+            <input class="search-popup-number-text delivery-input" type="text" name="count" value="2">
+            <div class="number-plus-wrapper">   
+              <a href="#" class="number-plus" aria-label="plus"></a>
+            </div>  
+          </div>
+        </div> 
+</div>
+
+
+
+
+        <button class="search-popup-button button" type="submit">Найти</button>   
+      </fieldset>
+    </form>     
+  </article>
+
+
+    
   </main> 
+
+
+
+
 
   <footer class="page-footer container">
     <ul class="page-footer-social-list">
@@ -136,6 +210,6 @@
     </a>
 
   </footer>  
-
+  <script src="js/popup.js"></script>
 </body>
 </html>
