--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <nav class="navigation">
-      <a title="Перейти" class="navigation-link" href="index.html">Главная</a>
+      <a title="Перейти" class="navigation-link active-link" href="index.html">Главная</a>
       <a title="Перейти" class="navigation-link" href="#">О Седоне</a>
       <a title="Перейти" class="navigation-link" href="catalog.html">Гостиницы</a>
     </nav>
@@ -111,74 +111,74 @@
       </div> 
     </article> 
 
-  <article class="search-popup popup-switcher">
-    <form class="search-popup-form" action="https://echo.htmlacademy.ru/" method="post" target="_blank">
+    <article class="search-popup popup-switcher">
+      <form class="search-popup-form" action="https://echo.htmlacademy.ru/" method="post" target="_blank">
 
-      <div class="search-popup-header">
-        <h2 class="search-popup-title">Поиск гостиницы в Седоне</h2>
-        <div class="close-wrapper">
-          <a href="#" class="close-popup open-popup close-icon-popup-search" aria-label="закрыть"></a>
-        </div>
-      </div>  
-      <fieldset class="search-popup-fieldset">
-        <legend class="search-popup-legend visually-hidden">Подбор тура</legend> 
-
-        <div class="search-popup-date-check-in search-popup-item">
-          <label class="search-popup-label" for="date-check-in">Дата заезда:</label>
-          <input class="date-check-in-input" type="text" name="date-check-in" placeholder="Укажите дату" id="date-check-in" required>
-          <span class="calendar-icon"></span>    
-        </div>
-        <div class="search-popup-date-check-out search-popup-item">
-          <label class="search-popup-label" for="date-check-out">Дата выезда:</label>
-          <input class="date-check-out-input" type="text" name="date-check-out" placeholder="Укажите дату" id="date-check-out" required>
-          <span class="calendar-icon"></span>   
+        <div class="search-popup-header">
+          <h2 class="search-popup-title">Поиск гостиницы в Седоне</h2>
+          <div class="close-wrapper">
+            <a href="#" class="close-popup open-popup close-icon-popup-search" aria-label="закрыть"></a>
+          </div>
         </div>  
+        <fieldset class="search-popup-fieldset">
+          <legend class="search-popup-legend visually-hidden">Подбор тура</legend> 
 
-
-
-
-
-
-<div class="people-number-wrapper">
-        <div class="search-popup-number search-popup-item">
-          <div class="search-popup-title-age"><span>Взрослые:</span> </div>
-          <div class="search-popup-number-wrapper">
-            <div class="number-minus-wrapper">
-              <a href="#" class="number-minus" aria-label="munis"></a>
-            </div>
-            <input class="search-popup-number-text" type="text" name="count" value="2">
-            <div class="number-plus-wrapper">   
-              <a href="#" class="number-plus" aria-label="plus"></a>
-            </div>  
+          <div class="search-popup-date-check-in search-popup-item">
+            <label class="search-popup-label" for="date-check-in">Дата заезда:</label>
+            <input class="date-check-in-input" type="text" name="date-check-in" placeholder="Укажите дату" id="date-check-in" required>
+            <span class="calendar-icon"></span>    
           </div>
-        </div> 
+          <div class="search-popup-date-check-out search-popup-item">
+            <label class="search-popup-label" for="date-check-out">Дата выезда:</label>
+            <input class="date-check-out-input" type="text" name="date-check-out" placeholder="Укажите дату" id="date-check-out" required>
+            <span class="calendar-icon"></span>   
+          </div>  
 
-                <div class="search-popup-number search-popup-item">
-          <div class="search-popup-title-age"><span class="children-title">Дети:</span> <span class="children-info">i</span>
-            <div class="hover-info">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</div>
+
+
+
+
+
+          <div class="people-number-wrapper">
+            <div class="search-popup-number search-popup-item">
+              <div class="search-popup-title-age"><span>Взрослые:</span> </div>
+              <div class="search-popup-number-wrapper">
+                <div class="number-minus-wrapper">
+                  <a href="#" class="number-minus" aria-label="munis"></a>
+                </div>
+                <input class="search-popup-number-text" type="text" name="count" value="2">
+                <div class="number-plus-wrapper">   
+                  <a href="#" class="number-plus" aria-label="plus"></a>
+                </div>  
+              </div>
+            </div> 
+
+            <div class="search-popup-number search-popup-item">
+              <div class="search-popup-title-age"><span class="children-title">Дети:</span> <span class="children-info">i</span>
+                <div class="hover-info">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</div>
+              </div>
+              <div class="search-popup-number-wrapper">
+                <div class="number-minus-wrapper">
+                  <a href="#" class="number-minus" aria-label="munis"></a>
+                </div>
+                <input class="search-popup-number-text delivery-input" type="text" name="count" value="2">
+                <div class="number-plus-wrapper">   
+                  <a href="#" class="number-plus" aria-label="plus"></a>
+                </div>  
+              </div>
+            </div> 
           </div>
-          <div class="search-popup-number-wrapper">
-            <div class="number-minus-wrapper">
-              <a href="#" class="number-minus" aria-label="munis"></a>
-            </div>
-            <input class="search-popup-number-text delivery-input" type="text" name="count" value="2">
-            <div class="number-plus-wrapper">   
-              <a href="#" class="number-plus" aria-label="plus"></a>
-            </div>  
-          </div>
-        </div> 
-</div>
 
 
 
 
-        <button class="search-popup-button button" type="submit">Найти</button>   
-      </fieldset>
-    </form>     
-  </article>
+          <button class="search-popup-button button" type="submit">Найти</button>   
+        </fieldset>
+      </form>     
+    </article>
 
 
-    
+
   </main> 
 
 
@@ -204,9 +204,9 @@
       </li>
     </ul>
 
-    <div class="page-footer-phone">+7 (812) 812-12-12</div>
+    <a href="tel:+7(812)812-12-12" class="page-footer-phone">+7 (812) 812-12-12</a>
 
-    <a class="page-footer-copyright-link" href="https://htmlacademy.ru/"><img src="img/html-academy.svg" width="115" height="33" alt="html academy">
+    <a class="page-footer-copyright-link" href="https://htmlacademy.ru/"><span class="visually-hidden">Html academy copyright</span>
     </a>
 
   </footer>  
