Добавляет стили к каталогу

--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,7 @@
     <div class="user-nav">
       <button class="user-nav-search" aria-label="Поиск"></button>
       <button class="user-nav-favourite" aria-label="В избранное"><span class="user-nav-favourite-number">12</span></button>
-      <a title="Получить преложение" class="user-nav-action-link open-popup brown-button">Хочу туда!</a>
+      <a title="Получить преложение" class="user-nav-action-link open-popup brown-button">Хочу сюда!</a>
     </div>
   </header>
 
@@ -48,7 +48,7 @@
 
 
 
-          <fieldset class="catalog-filter-group">
+          <fieldset class="catalog-filter-group infrastructure-group">
             <legend class="catalog-filter-title">Инфраструктура:</legend>
             <ul class="catalog-filter-list">
               <li class="catalog-filter-item">
@@ -68,7 +68,7 @@
 
 
 
-          <fieldset class="catalog-filter-group bluetooth-group">
+          <fieldset class="catalog-filter-group house-group">
             <legend class="catalog-filter-title">Тип жилья:</legend>
             <ul class="catalog-filter-list">
               <li class="catalog-filter-item">
