--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="img/favicon.ico">   
 </head>
 <body>
-
+  <div class="body-wrapper-inner">
   <header class="page-header container">
     <div class="logo-wrapper">
       <img class="logo-wrapper-img" width="140" height="70" src="img/logo.svg" alt="Логотип сайта">
@@ -26,7 +26,7 @@
     <div class="user-nav">
       <button class="user-nav-search" aria-label="Поиск"></button>
       <button class="user-nav-favourite" aria-label="В избранное"><span class="user-nav-favourite-number">12</span></button>
-      <a title="Получить преложение" class="user-nav-action-link open-popup brown-button">Хочу туда!</a>
+      <a title="Получить преложение" class="user-nav-action-link open-popup brown-button">Хочу сюда!</a>
     </div>
   </header>
 
@@ -43,7 +43,7 @@
 
       <div class="about-box-squares">
         <div class="about-box-square-item about-box-first">
-          <div class="square-item-title">Настоящи городок</div>
+          <div class="square-item-title">Настоящий городок</div>
           <div class="square-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</div>
         </div>
         <div class="about-box-square-item about-box-second"></div>
@@ -61,7 +61,7 @@
         </div>
         <div class="about-box-square-item about-box-sixth"></div>
         <div class="about-box-square-item about-box-seventh">
-          <div class="square-item-title">Там есть мост дьявола</div>
+          <div class="square-item-title">Там есть <br>мост дьявола</div>
           <div class="square-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>        
         </div>
       </div>
@@ -74,26 +74,26 @@
         <div class="advantage-item item-home">
           <img class="advantage-item-img" width="75" height="72" src="img/home.svg" alt="Доступное жильё">
           <div class="advantage-item-title">Жильё</div>
-          <div class="advantage-item-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
+          <div class="advantage-item-description">Рекомендуем пожить <br>в настоящем мотеле,<br> всё как в кино!</div>
         </div>
 
         <div class="advantage-item">
           <img class="advantage-item-img" width="74" height="70" src="img/food.svg" alt="Вкусная еда">
           <div class="advantage-item-title">Еда</div>
-          <div class="advantage-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</div>
+          <div class="advantage-item-description">Всегда заказывайте<br> топовый фирменный бургер, вы не разочаруетесь!</div>
         </div>
 
         <div class="advantage-item item-present">
-          <img class="advantage-item-img" width="75" height="72" src="img/present.svg" alt="Сувениры на память">
+          <img class="advantage-item-img" width="64" height="76" src="img/present.svg" alt="Сувениры на память">
           <div class="advantage-item-title">Сувениры</div>
-          <div class="advantage-item-description">Не только китайского, но и настоящего местного производства!</div>
+          <div class="advantage-item-description">Не только китайского,<br> но и настоящего местного производства!</div>
         </div>
       </div>
     </section> 
 
     <section class="call-to-action container">
       <h2 class="call-to-action-title">Заинтересовались?</h2>
-      <p class="call-to-action-decription">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <p class="call-to-action-decription">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <a class="call-to-action-link brown-button" href="#">ПОИСК ГОСТИНИЦЫ В Cедоне</a>
     </section>
 
@@ -209,7 +209,8 @@
     <a class="page-footer-copyright-link" href="https://htmlacademy.ru/"><span class="visually-hidden">Html academy copyright</span>
     </a>
 
-  </footer>  
+  </footer>
+  </div>  
   <script src="js/popup.js"></script>
 </body>
 </html>
