--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <main class="main-index">
       <h1 class="visually-hidden">Туристический сайт Седона</h1>
       <section class="hero-block container">
+        <h2 class="visually-hidden">Преимущества Седоны</h2>
         <div class="hero-block-subtitle"></div>
         <div class="hero-block-title"></div>
       </section>
