--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,6 @@
   <meta name="description" content="Седона - туристический сайт">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="styles/style.css">
-  <link rel="icon" href="img/misc/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
   <link rel="icon" href="img/favicon.ico"> 
 </head>
@@ -24,8 +23,8 @@
       </nav>
 
       <div class="user-nav">
-        <button class="user-nav-search" aria-label="Поиск"></button>
-        <button class="user-nav-favourite" aria-label="В избранное"><span class="user-nav-favourite-number">12</span></button>
+        <button type="button" class="user-nav-search" aria-label="Поиск"></button>
+        <button type="button" class="user-nav-favourite" aria-label="В избранное"><span class="user-nav-favourite-number">12</span></button>
         <a title="Получить преложение" class="user-nav-action-link open-popup brown-button">Хочу сюда!</a>
       </div>
     </header>
@@ -164,7 +163,7 @@
             </div>
           </div> 
           <div class="hotel-catalog-carts-item">
-            <img width="300" height="212" class="hotel-catalog-carts-item-img" src="img/hotel-green tree.jpg" alt="Отель зеленое дерево">
+            <img width="300" height="212" class="hotel-catalog-carts-item-img" src="img/hotel-green-tree.jpg" alt="Отель зеленое дерево">
             <div class="catalog-carts-item-description">
               <div class="hotel-name">GreenTree Inn</div>
               <div class="hotel-type">Гостиница</div>
@@ -192,8 +191,8 @@
         <div class="subscribe-form-box">
           <form action="https://echo.htmlacademy.ru/" method="post">
             <div class="subscribe-form-box-wrapper">              
-              <input type="text" name="signup-email" id="signup-email" class="signup-email-input" placeholder="Ваш e-mail" required>
-              <label for="signup-email" class="subscribe-form-box-label"></label> 
+              <input type="email" name="signup-email" id="signup-email" class="signup-email-input" placeholder="Ваш e-mail" required>
+              <label for="signup-email" class="subscribe-form-box-label"><span class="visually-hidden">Подписаться на рассылку</span></label> 
               <button class="subscribe-form-button button blue-button" type="submit">Подписаться</button>
             </div>
           </form>
@@ -221,16 +220,16 @@
               <label class="search-popup-label" for="date-check-out">Дата выезда:</label>
               <input class="date-check-out-input" type="text" name="date-check-out" placeholder="Укажите дату" id="date-check-out" required>
               <span class="calendar-icon"></span>   
-            </div>
+            </div>  
 
             <div class="people-number-wrapper">
               <div class="search-popup-number search-popup-item">
                 <div class="search-popup-title-age"><span>Взрослые:</span> </div>
                 <div class="search-popup-number-wrapper">
                   <div class="number-minus-wrapper">
-                    <a href="#" class="number-minus" aria-label="munis"></a>
+                    <a href="#" class="number-minus" aria-label="minus"></a>
                   </div>
-                  <input class="search-popup-number-text" type="text" name="count" value="2">
+                  <input class="search-popup-number-text" aria-label="число взрослых" type="text" name="count" value="2">
                   <div class="number-plus-wrapper">   
                     <a href="#" class="number-plus" aria-label="plus"></a>
                   </div>  
@@ -243,9 +242,9 @@
                 </div>
                 <div class="search-popup-number-wrapper">
                   <div class="number-minus-wrapper">
-                    <a href="#" class="number-minus" aria-label="munis"></a>
+                    <a href="#" class="number-minus" aria-label="minus"></a>
                   </div>
-                  <input class="search-popup-number-text delivery-input" type="text" name="count"a value="2">
+                  <input class="search-popup-number-text" aria-label="число детей" type="text" name="count" value="2">
                   <div class="number-plus-wrapper">   
                     <a href="#" class="number-plus" aria-label="plus"></a>
                   </div>  
@@ -261,7 +260,7 @@
     <footer class="page-footer container">
       <ul class="page-footer-social-list">
         <li class="footer-social-item">
-          <a target="_blank" rel="nofollow noopener" class="footer-social-link vk" href="#">
+          <a target="_blank" rel="nofollow noopener" class="footer-social-link vk" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Вконтакте</span>
           </a>
         </li>
@@ -276,7 +275,7 @@
           </a>
         </li>
       </ul>
-      <a href="tel:+7(812)812-12-12" class="page-footer-phone">+7 (812) 812-12-12</a>
+      <a href="tel:+78128121212" class="page-footer-phone">+7 (812) 812-12-12</a>
       <a class="page-footer-copyright-link" href="https://htmlacademy.ru/"><span class="visually-hidden">Html academy copyright</span>
       </a>
     </footer>
